--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
     "axios": "^0.27.2",
     "chakra-react-select": "^4.1.4",
     "framer-motion": "^6.3.16",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^2.5.1",
     "lodash.debounce": "^4.0.8",
     "moment": "^2.29.4",
+    "qrcode.react": "^3.1.0",
     "qs": "^6.11.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -22,7 +25,9 @@
     "react-icons": "^4.4.0",
     "react-js-loader": "^0.1.0",
     "react-router-dom": "^6.3.0",
+    "react-script": "^2.0.5",
     "react-scripts": "^5.0.1",
+    "react-select": "^5.7.0",
     "react-table": "^7.8.0",
     "uniqid": "^5.4.0",
     "web-vitals": "^2.1.4"
