--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
   "dependencies": {
     "@chakra-ui/icons": "^2.0.17",
     "@chakra-ui/react": "^2.2.1",
-    "@emotion/react": "^11.9.3",
-    "@emotion/styled": "^11.9.3",
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
+    "@material-ui/core": "^4.11.3",
+    "@mui/material": "^5.11.10",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
@@ -17,6 +19,7 @@
     "jspdf": "^2.5.1",
     "lodash.debounce": "^4.0.8",
     "moment": "^2.29.4",
+    "qrcode": "^1.5.1",
     "qrcode.react": "^3.1.0",
     "qs": "^6.11.0",
     "react": "^18.2.0",
@@ -24,6 +27,7 @@
     "react-helmet": "^6.1.0",
     "react-icons": "^4.4.0",
     "react-js-loader": "^0.1.0",
+    "react-qr-reader": "^2.2.1",
     "react-router-dom": "^6.3.0",
     "react-script": "^2.0.5",
     "react-scripts": "^5.0.1",
