--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@emotion/styled": "^11.10.6",
     "@material-ui/core": "^4.11.3",
     "@mui/material": "^5.11.10",
+    "@react-pdf/renderer": "^3.1.8",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
@@ -33,6 +34,7 @@
     "react-scripts": "^5.0.1",
     "react-select": "^5.7.0",
     "react-table": "^7.8.0",
+    "sweetalert2": "^11.7.3",
     "uniqid": "^5.4.0",
     "web-vitals": "^2.1.4"
   },
