--- a/package.json
+++ b/package.json
@@ -9,17 +9,23 @@
     "@emotion/styled": "^11.10.6",
     "@material-ui/core": "^4.11.3",
     "@mui/material": "^5.11.10",
-    "@react-pdf/renderer": "^3.1.8",
+    "@nuintun/qrcode": "^3.3.1",
+    "@react-pdf/renderer": "^3.1.9",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
     "chakra-react-select": "^4.1.4",
+    "file-saver": "^2.0.5",
     "framer-motion": "^6.3.16",
     "html2canvas": "^1.4.1",
+    "i": "^0.3.7",
     "jspdf": "^2.5.1",
+    "jspdf-autotable": "^3.5.28",
     "lodash.debounce": "^4.0.8",
     "moment": "^2.29.4",
+    "npm": "^9.6.4",
+    "qr-image": "^3.2.0",
     "qrcode": "^1.5.1",
     "qrcode.react": "^3.1.0",
     "qs": "^6.11.0",
@@ -28,7 +34,10 @@
     "react-helmet": "^6.1.0",
     "react-icons": "^4.4.0",
     "react-js-loader": "^0.1.0",
+    "react-pdf": "^6.2.2",
+    "react-qr-code": "^2.0.11",
     "react-qr-reader": "^2.2.1",
+    "react-qr-svg": "^2.4.0",
     "react-router-dom": "^6.3.0",
     "react-script": "^2.0.5",
     "react-scripts": "^5.0.1",
