--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react-scripts": "^5.0.1",
     "react-select": "^5.7.0",
     "react-table": "^7.8.0",
+    "react-to-pdf": "^0.0.14",
     "sweetalert2": "^11.7.3",
     "uniqid": "^5.4.0",
     "web-vitals": "^2.1.4"
