--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "chakra-react-select": "^4.1.4",
     "file-saver": "^2.0.5",
     "framer-motion": "^6.3.16",
+    "html-to-image": "^1.11.11",
     "html2canvas": "^1.4.1",
     "i": "^0.3.7",
     "jspdf": "^2.5.1",
