--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "lodash.debounce": "^4.0.8",
     "moment": "^2.29.4",
     "npm": "^9.6.4",
+    "papaparse": "^5.4.1",
     "qr-image": "^3.2.0",
     "qrcode": "^1.5.1",
     "qrcode.react": "^3.1.0",
