--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
     "chakra-react-select": "^4.1.4",
+    "docxtemplater": "^3.37.12",
     "file-saver": "^2.0.5",
     "framer-motion": "^6.3.16",
     "html-to-image": "^1.11.11",
@@ -23,10 +24,12 @@
     "i": "^0.3.7",
     "jspdf": "^2.5.1",
     "jspdf-autotable": "^3.5.28",
+    "jszip": "^3.10.1",
     "lodash.debounce": "^4.0.8",
     "moment": "^2.29.4",
     "npm": "^9.6.4",
     "papaparse": "^5.4.1",
+    "pizzip": "^3.1.4",
     "qr-image": "^3.2.0",
     "qrcode": "^1.5.1",
     "qrcode.react": "^3.1.0",
